--- a/www/css/demo.css
+++ b/www/css/demo.css
@@ -61,6 +61,11 @@ html, body {
     font-size: 18pt;
 }
 
+#error {
+    font-size: 18pt;
+    color: red;
+}
+
 #addapi {
     margin-top: 200px;
     float: right;
