Add small block for optional API key entry.

--- a/www2/css/demo.css
+++ b/www2/css/demo.css
@@ -70,3 +70,15 @@ html, body {
     margin-top: 200px;
     float: right;
 }
+
+#key {
+    font-size: 9pt;
+    margin-bottom: 60px;
+}
+
+#api_key {
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    font-size: 9pt;
+}
